1，移除jni依赖 2,完善static字段的获取与赋值